infra/helm/microservices/invoice-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invoice-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: api.localhost
      http:
        paths:
          - path: /api/invoice-service/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: invoice-service
                port:
                  number: 3009
